--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "gatsby-plugin-manifest": "^2.2.38",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sass": "^2.1.27",
+    "google-maps-react": "^2.0.2",
     "node-sass": "^4.13.1",
+    "now": "^16.7.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1"
