--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node-sass": "^4.13.1",
     "now": "^16.7.3",
     "react": "^16.12.0",
+    "react-animated-text": "^0.1.4",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1"
   },
