--- a/package.json
+++ b/package.json
@@ -5,17 +5,20 @@
   "author": "Royce Brooks",
   "dependencies": {
     "gatsby": "^2.19.5",
+    "gatsby-cli": "^2.8.29",
     "gatsby-plugin-google-analytics": "^2.1.35",
     "gatsby-plugin-manifest": "^2.2.38",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sass": "^2.1.27",
+    "gatsby-source-contentful": "^2.1.86",
     "google-maps-react": "^2.0.2",
     "node-sass": "^4.13.1",
     "now": "^16.7.3",
     "react": "^16.12.0",
     "react-animated-text": "^0.1.4",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-photo-gallery": "^8.0.0"
   },
   "keywords": [
     "gatsby"
