--- a/package.json
+++ b/package.json
@@ -14,11 +14,17 @@
     "google-maps-react": "^2.0.2",
     "node-sass": "^4.13.1",
     "now": "^17.0.3",
+    "path": "^0.12.7",
     "react": "^16.12.0",
     "react-animated-text": "^0.1.4",
+    "react-confetti": "^6.0.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "react-photo-gallery": "^8.0.0"
+    "react-loader-spinner": "^3.1.14",
+    "react-photo-gallery": "^8.0.0",
+    "react-router-dom": "^5.2.0",
+    "react-toastify": "^6.0.8",
+    "react-use": "^15.3.4"
   },
   "keywords": [
     "gatsby"
